<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:background="@color/color_bg_utama"
    android:layout_width="match_parent"
    android:layout_height="match_parent">




    <View
        android:id="@+id/green_canvas"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@color/green_500"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.375" />

   
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="@id/green_canvas"
        app:layout_constraintBottom_toBottomOf="@id/green_canvas"
        app:layout_constraintStart_toStartOf="@id/green_canvas"
        app:layout_constraintEnd_toEndOf="@id/green_canvas">

        <ImageView
            android:contentDescription="@string/todo"
            android:id="@+id/icon_image"
            android:layout_width="165dp"
            android:layout_height="133dp"
            android:layout_gravity="center"
            android:src="@drawable/icon_profile" />
        <TextView
            android:id="@+id/icon_text"
            android:layout_marginTop="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/bataniers"
            android:textColor="@android:color/white"
            android:textSize="30sp"
            android:gravity="center" />
    </LinearLayout>


    <com.google.android.material.button.MaterialButton
        android:id="@+id/button2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:paddingVertical="15dp"
        android:layout_marginTop="24dp"
        android:backgroundTint="@color/color_button_settings"
        android:drawableLeft="@drawable/baseline_help_24"
        android:fontFamily="sans-serif-medium"
        android:gravity="center_vertical"
        android:text="@string/help_amp_support"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/green_canvas" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_security"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:paddingVertical="15dp"
        android:layout_marginTop="14dp"
        android:backgroundTint="@color/color_button_settings"
        android:drawableLeft="@drawable/baseline_privacy_tip_24"
        android:fontFamily="sans-serif-medium"
        android:gravity="center_vertical"
        android:text="@string/security_amp_privacy"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button2" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/buttonFeedback"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="14dp"
        android:backgroundTint="@color/color_button_settings"
        android:drawableLeft="@drawable/baseline_feedback_24"
        android:fontFamily="sans-serif-medium"
        android:gravity="center_vertical"
        android:paddingVertical="15dp"
        android:text="@string/feedback"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_security" />

        <ImageButton
            android:id="@+id/logout"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/baseline_logout_24"
            android:scaleType="fitCenter"
            android:background="@null"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="20dp"
            android:contentDescription="@string/logout"
            app:layout_constraintTop_toTopOf="parent"/>


</androidx.constraintlayout.widget.ConstraintLayout>
